# Flint

./: .gitignore  PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
Flint - Asset Extractor/src-tauri/: Cargo.toml
Flint - Asset Extractor/src-tauri/src/commands/: file.rs  project.rs
docs/: AI-STEERING.md  ARCHITECTURE.md  BUILD.md  DESIGN.md  OVERVIEW.md  REQUIREMENTS.md  TASKS.md  TODO_OBSIDIAN.md
docs/user/: FAQ.md  FEATURES.md  QUICKSTART.md  TROUBLESHOOTING.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: bin.rs  export.rs  file.rs  hash.rs  mesh.rs  mod.rs  project.rs  updater.rs  wad.rs
src-tauri/src/core/: checkpoint.rs  frontend_log.rs  mod.rs
src-tauri/src/core/champion/: discovery.rs
src-tauri/src/core/export/: mod.rs
src-tauri/src/core/hash/: downloader.rs  hashtable.rs
src-tauri/src/core/league/: detector.rs
src-tauri/src/core/mesh/: animation.rs  mod.rs  scb.rs  skl.rs  skn.rs  texture.rs
src-tauri/src/core/project/: mod.rs  project.rs
src-tauri/src/core/repath/: mod.rs  organizer.rs  refather.rs
src-tauri/src/core/validation/: engine.rs  mod.rs
src-tauri/src/core/wad/: extractor.rs  reader.rs
src-tauri/tests/: bin_integration_test.rs  converter_integration_test.rs  wad_commands_test.rs  wad_extractor_test.rs  wad_reader_test.rs
src/components/: App.tsx  CenterPanel.tsx  CheckpointTimeline.tsx  FileTree.tsx  PreviewPanel.tsx  StatusBar.tsx  TabBar.tsx  Toast.tsx  TopBar.tsx  WelcomeScreen.tsx
src/components/modals/: ExportModal.tsx  FirstTimeSetupModal.tsx  NewProjectModal.tsx  RecolorModal.tsx  SettingsModal.tsx  UpdateModal.tsx
src/components/preview/: BinEditor.tsx  HexViewer.tsx  ImagePreview.tsx  LazyBinEditor.tsx  LazyModelPreview.tsx  ModelPreview.tsx  TextPreview.tsx
src/lib/: api.ts  fileIcons.tsx  logger.ts  ritobinLanguage.ts  state.ts  types.ts
src/styles/: index.css
