[package]
name = "flint"
version = "0.1.0"
edition = "2021"
default-run = "flint"

[lib]
name = "flint"
path = "src/lib.rs"

[[bin]]
name = "flint"
path = "src/main.rs"

[[bin]]
name = "bin_roundtrip_test"
path = "src/bin/bin_roundtrip_test.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Trimmed tokio: rt-multi-thread (async runtime), fs (file I/O), io-util (async write),
# sync (channels), macros (async tests), time (for Tauri timeouts)
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "io-util", "sync", "macros", "time"] }
# Use rustls-tls instead of native-tls for smaller binary size
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.4"
flate2 = "1.0"
zstd = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
camino = "1.1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.1", features = ["serde"] }

# Parallel processing for hash loading
rayon = "1.10"
futures = "0.3"

# Texture handling (DDS and TEX via league-toolkit)
ltk_texture = { version = "0.4", features = ["intel-tex"] }
# Trim image crate to only DDS support for smaller binary
image = { version = "0.25", default-features = false, features = ["dds"] }
image_dds = "0.6"
ddsfile = "0.5"
base64 = "0.21"

# League toolkit for WAD operations (from crates.io)
league-toolkit = { version = "0.2", features = ["serde"] }

# ltk_mesh from crates.io (0.3.0 for ltk_primitives 0.3.x compatibility)
ltk_mesh = "0.3.0"

# glam for vector math (must match league-toolkit's version for Format trait compatibility)
glam = "0.27"

# League Toolkit for BIN file parsing (crates.io for compatible ltk_primitives version)
ltk_meta = { version = "0.3.3", features = ["serde"] }
ltk_ritobin = "0.1.4"
ltk_anim = "0.3.0"

# League Toolkit file type detection
ltk_file = "0.2"

# Standard directories
directories = "5.0"

# Recursive directory walking
walkdir = "2.4"

# ZIP file creation for fantome export
zip = { version = "2.4", features = ["deflate"] }
regex = "1.12.2"

# League Mod - Project system & export (from crates.io)
ltk_mod_project = "0.1"
ltk_mod_core = "0.1"
ltk_fantome = "0.1"
ltk_modpkg = { version = "0.1", features = ["project"] }

# Additional dependencies required by ltk crates
eyre = "0.6"
binrw = "0.14"
toml = "0.8"
slug = "0.1"
itertools = "0.14"
semver = "1.0"
sha2 = "0.10.9"
uuid = { version = "1.20.0", features = ["v4"] }

# Windows registry access (Windows only)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

# =============================================================================
# BUILD PROFILES - Optimized for fast incremental compilation
# =============================================================================

# Development profile - fastest incremental rebuilds
[profile.dev]
# Minimal optimization for your code (fastest compile)
opt-level = 0
# More codegen units = more parallelism during compilation
codegen-units = 256
# Enable incremental compilation
incremental = true
# No debug info by default (faster linking), set to 2 for debugging
debug = 1

# Optimize dependencies even in dev mode (they don't change often)
# This makes your app run faster without slowing down your code changes
[profile.dev.package."*"]
opt-level = 2
codegen-units = 16

# Release-dev profile - for testing with optimizations (NO slow LTO)
# Use: cargo build --profile release-dev
[profile.release-dev]
inherits = "release"
opt-level = 2
lto = "off"
codegen-units = 16
incremental = true
debug = 1
strip = false

# Full release profile - slow build, maximum performance
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
